--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "dependencies": {
     "@nestjs/common": "^8.4.5",
     "@nestjs/core": "^8.4.5",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "passport": "^0.5.3",
+    "passport-activedirectory": "^1.0.4",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
@@ -37,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.1",
     "@types/node": "^17.0.35",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
