--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.5.3",
     "passport-activedirectory": "^1.0.4",
     "passport-jwt": "^4.0.0",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
